--- a/src/Components/auth/Auth.css
+++ b/src/Components/auth/Auth.css
@@ -2,3 +2,12 @@
   text-align: center;
   background-color: #1f2833;
 } */
+#sticky-footer {
+  background-color: #1f2833 !important;
+  margin-left: 25px;
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  font-size: 20px;
+}
