--- a/src/Components/home/Navbar.css
+++ b/src/Components/home/Navbar.css
@@ -1,46 +1,15 @@
-input {
-  border: none;
-  border-radius: 5px;
-  background-color: #66fcf1;
-  height: 40px;
-  width: 300px;
-  text-indent: 5px;
-  /* margin-top: 1em;
-  margin-bottom: 1em; */
-  font-size: 18px;
-}
-input:focus {
-  outline: none;
-  background-color: #66fcf1;
-  color: #000000;
-}
-
-nav img {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 ::placeholder {
-  color: #ffffff;
+  color: white !important;
+}
+@font-face {
+  font-family: payday;
+  src: url("./assets/PaybAck.ttf");
 }
 
-#photo {
-  text-align: center;
-  display: block;
-  margin: 0 auto;
+#navTitle {
+  font-family: payday;
 }
 
-/* .button {
-  background-color: #66fcf1;
-  border: none;
-  color: black;
-  text-decoration: none;
-  border-radius: 15px;
-  font-size: 16px;
-  display: inline-block;
-} */
-
-button:focus {
-  outline: none;
+#navLog {
+  font-family: payday;
 }
